@@ -1,3 +1,4 @@
+- implemented: add search functionality to team drives #83
 - started work on add search functionality to team drives #83
 - change "never ran" to "starting shortly"
 - finalized speed optimations for STRM creation
